--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "vue-cli-service lint --fix"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.4.3",
+    "moment": "^2.24.0",
     "sweetalert2": "^9.4.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
