--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
+    "google-polyline": "^1.0.3",
     "moment": "^2.24.0",
     "sweetalert2": "^9.4.0",
     "vue": "^2.6.10",
